# constify

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
constify/: all.html  index.html  macro.constify!.html  macro.constify.html  macro.try_constify!.html  macro.try_constify.html  sidebar-items.js
src/: lib.rs
src/constify/: lib.rs.html
